cluster/homelab/apps/media/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: sonarr
    namespace: media
    annotations:
        gethomepage.dev/enabled: ENC[AES256_GCM,data:9FSeEg==,iv:a00nfOg0FIPpas+yAwBi8itQ5m2ug6scE2R9U1/7pDg=,tag:1VmaopcW9rfBzcP32xvKRg==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:wwqXovx/hpDmQ9OeKJBL3A==,iv:90Zhj12EnxK+1Ve8RXJWJC/mN0Y59jexyN3L51mNRzQ=,tag:Mzln5x4jqO0UwIgx82rwsQ==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:SreMiVF0rRc=,iv:2eP3cVddKTZbEPZO2Bn9JO117yVBxL7qGG7HqI3r+vI=,tag:8Qn28CkIFPDy0IcBzxf2dw==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:VWsgRIsD,iv:+OS1XfPlGbleASJErjFv9O4p098c4ubx6czc15YuK+E=,tag:r6SNGmwJwryP20qlaij0Rw==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:VYUUcf1t,iv:t5/pCuXqWF5e7UA+Yeleq80shsKzFM63C650ueI+hG0=,tag:wXDA8FYK79tXWfO8pxFCMg==,type:str]
        gethomepage.dev/widget.type: ENC[AES256_GCM,data:246LbrfU,iv:69/WxWLE5LsievrJER8gpWnbXZ61aQKr8SlpiuiUehA=,tag:ohJsERKFqYEg+g+d+pCabQ==,type:str]
        gethomepage.dev/widget.url: ENC[AES256_GCM,data:LldmuTFrMH9c5WUtM1nbO/dwtt3sd3foKVe2jKnpgA==,iv:SheRPiZd+OD+VwPLux2B7nFUhKyp62xYmApEkyU69b0=,tag:gVzxIdtdDuHJRqh6fVnv7g==,type:str]
        gethomepage.dev/widget.key: ENC[AES256_GCM,data:fxOfOQMnS08P8BA9vdeuZ/T+GlRnrEJzDz6Aq55C2Y4=,iv:RREVGuuw5DPdUDYYxkkPVLV+dVqpuBoNpWGvxZjJDsQ=,tag:5AqHrCqkDOxV4R6rB+03qQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnQjJIMUNyQkt0R0xTdk5j
[...]
            CAGOtWjYKp4ocVMv8ns0Drca/77Ep/fJZZu7TECTTUfOqT3GUGO8iQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-03-16T12:25:07Z"
    mac: ENC[AES256_GCM,data:eAnogs9Z0srJtBnJGpbafmZi+Q4AvNlJFkFAgBVAjHiflBj5g06uvuRGhLkQGLfs7KlMB/47gmG4WR9Bjcv3Zlqs8AQglaPWxrF3FWUSLIglMmok8/mnPS7kryMQC8/3CeumaBbohn4W16PR8TqrChEC82go8IaxD6EPrSc1j9g=,iv:AZtnq99Ow4TpLgvDFoxZUUfCDzfP7uPZwLdjv/Et5Wk=,tag:7G3zcgDs3Ng+BIiN58ka7w==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|annotations|host)$
    version: 3.8.1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: flaresolverr
    namespace: media
    annotations:
        gethomepage.dev/enabled: ENC[AES256_GCM,data:gFlJ/g==,iv:beDJEX7nKKlkiS92B2pF7MQKxTzAmemj1kkJji+4oyI=,tag:oXku/nCBfcPQj2Nb/hvBhA==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:0F74ufkZkO0QdAxJe/G2TIXVjR3LXnbI7X3Z/A==,iv:BLkO9cATKjIFgKHq8PMTwYgupp1W4LuvhxSgix5RckE=,tag:DsXtcfxCSoP8aN6j7XBI/Q==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:mv8NIuI=,iv:texEOdlD3mdGTnGHc5me0mLlUTT+9TRbr0HBgDrNKUU=,tag:xYCuA0DWaXyiMJIF5+7aAw==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:SVTpLlBpaZ8CGw==,iv:gUvJLGmIgnmS4JC3rU499n5LraIxOpFzMgftyAm03Z8=,tag:ObPge1DjjtCxRz9f9PmDGA==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:xmIOURXm+U32KzSj,iv:loBu/fgHk5TvznBXA9TH+lZKJmWNC71IBNCCLShPBkw=,tag:UPeo6NuKvKezUHk9DrlbJA==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnQjJIMUNyQkt0R0xTdk5j
[...]
            CAGOtWjYKp4ocVMv8ns0Drca/77Ep/fJZZu7TECTTUfOqT3GUGO8iQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-03-16T12:25:07Z"
    mac: ENC[AES256_GCM,data:eAnogs9Z0srJtBnJGpbafmZi+Q4AvNlJFkFAgBVAjHiflBj5g06uvuRGhLkQGLfs7KlMB/47gmG4WR9Bjcv3Zlqs8AQglaPWxrF3FWUSLIglMmok8/mnPS7kryMQC8/3CeumaBbohn4W16PR8TqrChEC82go8IaxD6EPrSc1j9g=,iv:AZtnq99Ow4TpLgvDFoxZUUfCDzfP7uPZwLdjv/Et5Wk=,tag:7G3zcgDs3Ng+BIiN58ka7w==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|annotations|host)$
    version: 3.8.1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: kavita
    namespace: media
    annotations:
        gethomepage.dev/enabled: ENC[AES256_GCM,data:inUMpw==,iv:L8Zcp2lJ8Neh8DLCJNiAbcIG/8ORoGzNJcL7LsYVSWE=,tag:mkxhsHMePaV6VyqnawJFMg==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:sRRmLzqKfPK6oJT3NZa2k8l7HEibAtI=,iv:1H/B+B2W84t5uzhkmgqBmXX3jl+UUf3LcW4FuTwCk+U=,tag:pfpBeTk5wJxT9VjI3i8t5A==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:w6K/PLA=,iv:3TtgqQXR4bNExvDAkoELOGZeruRrxFivf7iCSVQDGVY=,tag:eygLcpk8bJOIs9C2w0kj4Q==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:u86zCpc2,iv:MI8dbK/q9aaUQzbYu1FuT6d//SifP1QCNXMH9IPtAdY=,tag:0Wg5Khppnk+b+x7+GXCbuQ==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:XhT4H2tx,iv:PoN04fcANTNhyN/Pjl1NhRKWmpF21pBnb2wQlqNb/JE=,tag:yTfJwj6K0U8E9OWVzc/H2w==,type:str]
        gethomepage.dev/widget.type: ENC[AES256_GCM,data:k3e5f5IL,iv:wq7JbThJDusM9sxdawn7VnKZJgIHL+VJm7EtynoVNZA=,tag:lrj5OqmdQTqGW4ItH+150g==,type:str]
        gethomepage.dev/widget.url: ENC[AES256_GCM,data:15Fk74KGQIKFaSngICtyIM1Y7lEHRykiwBdPpPF2Kg==,iv:AAl2qXnicsXk67UqJneTSIk3jqokAIFkImqPg/Uk3uA=,tag:KY/AOKydOu9d6BQqmUrMnQ==,type:str]
        gethomepage.dev/widget.username: ENC[AES256_GCM,data:0vnonYzV,iv:/K12M1WUg/0P2BVlaJ/janWeINhKxSS9vmAXgVpjSjQ=,tag:RGKoQQX0amk+c2AypcmVWw==,type:str]
        gethomepage.dev/widget.password: ENC[AES256_GCM,data:I4kxsHruDkc=,iv:OggVF/8Z36O2EOEKBnOgVldPmkJuJv0wK6DcXtaE4j0=,tag:U4ujAoYEIXK9bSFYEc5+0w==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnQjJIMUNyQkt0R0xTdk5j
[...]
            CAGOtWjYKp4ocVMv8ns0Drca/77Ep/fJZZu7TECTTUfOqT3GUGO8iQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-03-16T12:25:07Z"
    mac: ENC[AES256_GCM,data:eAnogs9Z0srJtBnJGpbafmZi+Q4AvNlJFkFAgBVAjHiflBj5g06uvuRGhLkQGLfs7KlMB/47gmG4WR9Bjcv3Zlqs8AQglaPWxrF3FWUSLIglMmok8/mnPS7kryMQC8/3CeumaBbohn4W16PR8TqrChEC82go8IaxD6EPrSc1j9g=,iv:AZtnq99Ow4TpLgvDFoxZUUfCDzfP7uPZwLdjv/Et5Wk=,tag:7G3zcgDs3Ng+BIiN58ka7w==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|annotations|host)$
    version: 3.8.1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: prowlarr
    namespace: media
    annotations:
        gethomepage.dev/enabled: ENC[AES256_GCM,data:nyEzRg==,iv:0jj83qCJS3qxWqhW4uNkXYGhttz9U65KKXVjF34Fwro=,tag:wA3j21R3F/NwzI/JN/u4BA==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:3dop/UgEI53cTyGf/9eh,iv:bIhG+oSx1EGf0I3BmQ8EiX+8tZU+Tbw8fda1h5c0io0=,tag:vSHd85N1ljZmM5LNjUYQ+w==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:VB4QprSLXIY=,iv:D0/G46Bh58dMQnbeu8H4F9MFU6NhIlvKz0IQ6Luy4Xo=,tag:F5GKktXoWRjKIYxLkZ+JHQ==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:qTP9os5PRkQ=,iv:TRekT4DAU8Tar+TDSV38a7WSkNhBiVL5IhjfNJiVeKM=,tag:insOG7yNuc7AU5g1AEscQw==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:1THVAYB8Mn8=,iv:3YPS1moEQaGZOOG0/uSvBTU17FusOlOfNtOzBIC+uRs=,tag:FQkekdy46LAJxWQNpMFt6A==,type:str]
        gethomepage.dev/widget.type: ENC[AES256_GCM,data:pdXzcxu/bls=,iv:GY83+AXV9exxSV3FOatXtGGnoqla2jDQPhMyPisXb4I=,tag:oXtZceFMcBe6kLlQx8/LaA==,type:str]
        gethomepage.dev/widget.url: ENC[AES256_GCM,data:qRa1VJs7/nSAkgYvjldq6fWXCQjsVuOuiILW9Tqr95Dh,iv:g3vrn3fWx41jqzNF+eqF2XFNiYitL/W7uV+x6Xwu2t0=,tag:zdqWue9xL7CqXx7a7AiHxw==,type:str]
        gethomepage.dev/widget.key: ENC[AES256_GCM,data:x36neck1Cpxj2RjxyReUi2FzT5y/U52wYIElrTwT0Yk=,iv:ngMSQXOC3FtEY5S2SBr/aHYPDJBHg4Nqn3kyNeCUJ3g=,tag:iKGgJqDQbtmZQqFvwWdfYQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnQjJIMUNyQkt0R0xTdk5j
[...]
            CAGOtWjYKp4ocVMv8ns0Drca/77Ep/fJZZu7TECTTUfOqT3GUGO8iQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-03-16T12:25:07Z"
    mac: ENC[AES256_GCM,data:eAnogs9Z0srJtBnJGpbafmZi+Q4AvNlJFkFAgBVAjHiflBj5g06uvuRGhLkQGLfs7KlMB/47gmG4WR9Bjcv3Zlqs8AQglaPWxrF3FWUSLIglMmok8/mnPS7kryMQC8/3CeumaBbohn4W16PR8TqrChEC82go8IaxD6EPrSc1j9g=,iv:AZtnq99Ow4TpLgvDFoxZUUfCDzfP7uPZwLdjv/Et5Wk=,tag:7G3zcgDs3Ng+BIiN58ka7w==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|annotations|host)$
    version: 3.8.1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: radarr
    namespace: media
    annotations:
        gethomepage.dev/enabled: ENC[AES256_GCM,data:yAkivQ==,iv:jNsOaNgZDIZZaEzA31L5QTF7dGKcvyCLze1RWaFXZzg=,tag:PimN3pHUeNIbixtEdTeiuw==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:y10dglYtkQfvSubMEcp8QQU=,iv:SWHidygSSLsf2+/xOSS4IvngPDE1JGCJj053ITVzCaY=,tag:uohIcIdxCOJRWpx1tIEJVQ==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:kK1QKqMeMqk=,iv:CYz9UhQCpz0+hSCrbzsjjmn0b7l0DIevQv9JSYC4esQ=,tag:QvQ6xGZUvbITH0/YxPgh0Q==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:ktWpZOja,iv:1EdMZfunjeaTup1DGQLJiXqBFKtY4svYvsdPDmC7Mf0=,tag:x+VnFta+P6ViskY56YPTAQ==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:lir/jSvL,iv:UE1ihHs6+SOZgj4Gl5FkujNnXvG7V1+OdK1V+Xx6Vts=,tag:ITjMRlh8x1TuFgxsNRG91w==,type:str]
        gethomepage.dev/widget.type: ENC[AES256_GCM,data:0JhmFY88,iv:cvDZXOr440+qgJCiCshyZLIrrVoV2homxdT3UGMIkvg=,tag:rH/FeNOS5LjHgxPDB8zKyQ==,type:str]
        gethomepage.dev/widget.url: ENC[AES256_GCM,data:XLIPNARf9cTfdnWm32oTaAoflg2iPGi5F4APFHzyDQ==,iv:8q/mXGjjxWleDt7P3TJep8udnRnq6imw8MFYw5PN5Aw=,tag:dX4DnuvoM9JHwOYF7lmdfA==,type:str]
        gethomepage.dev/widget.key: ENC[AES256_GCM,data:lKAks9KTFBupgtpEInh68Jhg4h42tNr5r6YW15SL3lo=,iv:Fxqw+paemjD/WjNneZO3P71ribnWXo59lrMh0adVWpU=,tag:itfprBmjZnaTrA/vbjF/ag==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnQjJIMUNyQkt0R0xTdk5j
[...]
            CAGOtWjYKp4ocVMv8ns0Drca/77Ep/fJZZu7TECTTUfOqT3GUGO8iQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-03-16T12:25:07Z"
    mac: ENC[AES256_GCM,data:eAnogs9Z0srJtBnJGpbafmZi+Q4AvNlJFkFAgBVAjHiflBj5g06uvuRGhLkQGLfs7KlMB/47gmG4WR9Bjcv3Zlqs8AQglaPWxrF3FWUSLIglMmok8/mnPS7kryMQC8/3CeumaBbohn4W16PR8TqrChEC82go8IaxD6EPrSc1j9g=,iv:AZtnq99Ow4TpLgvDFoxZUUfCDzfP7uPZwLdjv/Et5Wk=,tag:7G3zcgDs3Ng+BIiN58ka7w==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|annotations|host)$
    version: 3.8.1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: readarr
    namespace: media
    annotations:
        gethomepage.dev/enabled: ENC[AES256_GCM,data:m4prkw==,iv:bm8nn8Eibzt5xZRJ91IyC56MOS5yi6MisTxaEjnXwwI=,tag:SoaBQ7LGWYZyBo+1HhCotg==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:g8MtQujdVXKYLSMu4g==,iv:d9BeJn+HYEnsmLtU6npg8GE4EIwoavtIBJmrWBzpw7Y=,tag:lAXuGNCTXv3P5DPXWcjIeQ==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:3HbSf5wL/T8=,iv:ZLZS9U4Iv2oYeAd9ZPJJM/ZOlos6t0c5NLZaZJjPdwc=,tag:FYgda7Hm7kumXxv6gaKfsA==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:l2i79hXq0g==,iv:z4Z17Meae7F42y9MOHIuAeTIC3v0M0+AXPwQcVZNxps=,tag:w4Fu49J4BfCxWBl7zV8iNw==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:TVBN72vqew==,iv:bw2EcrgoJ8N5ZkMNBZyNRcL6+hqx0xDAr3I4vEq9bC4=,tag:BVVuRKFCDaptlRlX32CgpA==,type:str]
        gethomepage.dev/widget.type: ENC[AES256_GCM,data:fQtDtP9AnQ==,iv:LOAzankBOg5aJXn5ETVJN6BbTgpjmwX3Vcd93O1+rS8=,tag:aYFWSwq/2wp3iCQrqwqSIA==,type:str]
        gethomepage.dev/widget.url: ENC[AES256_GCM,data:QHeGRdN+yVLO91ejekV5XOs9aXxSmlEmtTaju0hHZgI=,iv:jkuqigfQe1dA5/F3GzC+m5kA2fTunWfRUV0in0XgigM=,tag:Rgb/mMO794fk/Vsi3chrhQ==,type:str]
        gethomepage.dev/widget.key: ENC[AES256_GCM,data:aCq57d/owJxhHLmnVAzHs3TUCZAHiToHeaKNGM3dwO0=,iv:veeLq8/1VE6+Gx7Y/J5bCXAZqasucxRJ2+cpVNzhX4o=,tag:wKqZ0w1wblRFLs2pCbwyZA==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnQjJIMUNyQkt0R0xTdk5j
[...]
            CAGOtWjYKp4ocVMv8ns0Drca/77Ep/fJZZu7TECTTUfOqT3GUGO8iQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-03-16T12:25:07Z"
    mac: ENC[AES256_GCM,data:eAnogs9Z0srJtBnJGpbafmZi+Q4AvNlJFkFAgBVAjHiflBj5g06uvuRGhLkQGLfs7KlMB/47gmG4WR9Bjcv3Zlqs8AQglaPWxrF3FWUSLIglMmok8/mnPS7kryMQC8/3CeumaBbohn4W16PR8TqrChEC82go8IaxD6EPrSc1j9g=,iv:AZtnq99Ow4TpLgvDFoxZUUfCDzfP7uPZwLdjv/Et5Wk=,tag:7G3zcgDs3Ng+BIiN58ka7w==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|annotations|host)$
    version: 3.8.1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: overseerr
    namespace: media
    annotations:
        gethomepage.dev/enabled: ENC[AES256_GCM,data:ZEcXyw==,iv:SZL0fD48GCARbycCV+Pl885bSs0zG2bChsoOrl+/Ois=,tag:T1I7FK21ASknbEvBW1zw2w==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:8MDAkIaN9v4EIJp0lXA=,iv:62RBIItv++or8FBKjs7gd6fz7SIoVNxab/N9XhxNt2E=,tag:SJleKqWLz+BWz/KMVJy0WA==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:G+L+Cx4=,iv:95HgGcWxMDgUTQN3U29haDrNNAo8xTgwKlH1jki2WQo=,tag:8A+gYFrPuVfPkCLlwOGziw==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:wrqsJbwhBtnC,iv:wx7aBwypxGF5U5BrUDALuArRhRN8GZ9FaF13QVF/UQI=,tag:0WsCE7H7rdmY/+D03GQnVA==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:lakTiYcBMMMT,iv:Yr1hQnMYLGjuLlMBxdCn5XwbwIuyzgkQQBpNWtuji7A=,tag:KDAYpdnCGkQhGRmH5cWfLQ==,type:str]
        gethomepage.dev/widget.type: ENC[AES256_GCM,data:Gzdx1sAImQU5,iv:w0DOP60AOwyJYzvg9+azh2YX75PuZvezFz+fNxl8OA4=,tag:MNLltVl+PlQgdfEF6pe9Sg==,type:str]
        gethomepage.dev/widget.url: ENC[AES256_GCM,data:fEROn8P7b8A7VDZ0CoeJcHw+lhE+HsJR3yDCZD/5b5pF1A==,iv:NJ+kr8UreHHbn8qDsJvdHForsud6VxJJyMkpoXQaZyM=,tag:aqfK2PHjfWmQOPq9v2rzDg==,type:str]
        gethomepage.dev/widget.key: ENC[AES256_GCM,data:75yvLDbr1N6s1ZGwM3dpnIKGJ6hImgN0QoHEQYkEoxcUgd9+JrzNYclJSI0ye1BT1OqVUUoS+yDO2EIK/CrDAuBLNuI=,iv:8zRzhS648/gwruhdIFp5rxmL4Ng9b/z7L9Jp2xYRtZs=,tag:q7XIyGXRd9ZLN47BI6uHrw==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnQjJIMUNyQkt0R0xTdk5j
[...]
            CAGOtWjYKp4ocVMv8ns0Drca/77Ep/fJZZu7TECTTUfOqT3GUGO8iQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-03-16T12:25:07Z"
    mac: ENC[AES256_GCM,data:eAnogs9Z0srJtBnJGpbafmZi+Q4AvNlJFkFAgBVAjHiflBj5g06uvuRGhLkQGLfs7KlMB/47gmG4WR9Bjcv3Zlqs8AQglaPWxrF3FWUSLIglMmok8/mnPS7kryMQC8/3CeumaBbohn4W16PR8TqrChEC82go8IaxD6EPrSc1j9g=,iv:AZtnq99Ow4TpLgvDFoxZUUfCDzfP7uPZwLdjv/Et5Wk=,tag:7G3zcgDs3Ng+BIiN58ka7w==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|annotations|host)$
    version: 3.8.1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: transmission
    namespace: media
    annotations:
        gethomepage.dev/enabled: ENC[AES256_GCM,data:SYN0cg==,iv:OaSo/X2X/dn+P/t1p1uP7cmH6xbICc+IP93mJJ6ol/8=,tag:07tAHiD4NkDObgpswFj/fA==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:piSJ0gI+FCGGr7MZTKvB,iv:dJlvRoonAODzjTmT0OVRisust5m/Le/rAOM5Sv/dai8=,tag:Z1+MMxxsIR1ZcZOmZmOYPg==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:zv5anKOPgpE=,iv:vnZjjt1dQv6PJd+3sTio5pxf7e4OUZs2mwyLRqjINrM=,tag:RIfE9Nx6evQ4NtAmLqodyQ==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:8UlkSMffKvl0TEhL,iv:FoAvvpmiZ/KCkICgUxSj0n4Onpx4giYw9YN8hXTSBDw=,tag:Gi7A9Tp4RrYTXQAuUWI+5A==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:xmdBQm4zLnUhGArI,iv:fiJAuEJ4Kuk1bqXIEKJGZiKPxfaxi8TGv0mSPRC+n4w=,tag:Z8GBeqdlzRQ1LWTEP3rIQw==,type:str]
        gethomepage.dev/widget.type: ENC[AES256_GCM,data:FdNzRXdoPQsPyiu0,iv:gW5MCMcusnRi9QOhmjlaW6Mz+jf0kpSYe4WNRvpYnC8=,tag:K0fu9LqlvpkzylQkvkzqqA==,type:str]
        gethomepage.dev/widget.url: ENC[AES256_GCM,data:wtTBDitMVY2lR0vqp32IiVPTjWgpnbz+6/CoTf72+fp4MU3e5w==,iv:azCSRq0aPyPuNmdcEtx7q8oV6HTBlj3j2IozjQlDJNI=,tag:QT7KdpyblELOZVYxqSFK0w==,type:str]
        gethomepage.dev/widget.username: ENC[AES256_GCM,data:3schh8CvFJA=,iv:n6hySQr7jBnjqTIFOqhOugkakb+ObWQ5eHjoNylBYbw=,tag:jaOnwAgOVksnZvu71/NjvQ==,type:str]
        gethomepage.dev/widget.password: ENC[AES256_GCM,data:NsPYHIiug6o=,iv:w/qbYIMAUNdFqMIfAL7NrVcj6ioNb0N9z3GKkYToH54=,tag:2u3Vm8Ygf23Q6ahnEr2B8A==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnQjJIMUNyQkt0R0xTdk5j
[...]
            CAGOtWjYKp4ocVMv8ns0Drca/77Ep/fJZZu7TECTTUfOqT3GUGO8iQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-03-16T12:25:07Z"
    mac: ENC[AES256_GCM,data:eAnogs9Z0srJtBnJGpbafmZi+Q4AvNlJFkFAgBVAjHiflBj5g06uvuRGhLkQGLfs7KlMB/47gmG4WR9Bjcv3Zlqs8AQglaPWxrF3FWUSLIglMmok8/mnPS7kryMQC8/3CeumaBbohn4W16PR8TqrChEC82go8IaxD6EPrSc1j9g=,iv:AZtnq99Ow4TpLgvDFoxZUUfCDzfP7uPZwLdjv/Et5Wk=,tag:7G3zcgDs3Ng+BIiN58ka7w==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|annotations|host)$
    version: 3.8.1
