cluster/homelab/apps/media/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: sonarr
    namespace: media
    annotations:
        kubernetes.io/ingress.class: ENC[AES256_GCM,data:0KweVPc=,iv:JijFu3Xe5md8hrhZl3LOxJK/gXz2oCPxkZEyODGC26w=,tag:m7+y3pMdonqoHVGs4//gaw==,type:str]
        gethomepage.dev/enabled: ENC[AES256_GCM,data:i+oWXg==,iv:Ewa7GxYvBEl1INA/xiVKO4xKr/C04rR+CYbxG3VU8Ww=,tag:8uVnezow+VamzLTZSFTP9w==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:BTAuOw4l8axAGR+QkIKrFA==,iv:eqWqbuxJei7Rxxte+FFzxRIKfDHkd1rsE8ip1hTKlNw=,tag:ErDw/8JrOImOn0QyqcUE4g==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:YA/J39dNtzKzVhs=,iv:CWkFMbu1H/AxNhEp7qIlJ30IXrvm7NQ4m3Zz2QHgbsc=,tag:KUadnj12SA4SWIq5XlYieQ==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:TOFySnI3,iv:qTx2BEij0YMpu+PzvqhFIbvhvJ+MO4WWGV6tndqqt7M=,tag:l1XPD3yGA6KzHSLQEya+4w==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:aUpyqV9Q,iv:VqzcluTOYWL7GKM2VFXrH8TQ3DQtDMUXFQDpGutDmDc=,tag:ED4L1yeO8JNlbWvJRPtXZg==,type:str]
        gethomepage.dev/widget.type: ENC[AES256_GCM,data:rmxXQN7R,iv:o4onDz564O7r9n8VGNwXBk0yjuPGom7qFDakNG5IKo8=,tag:i8jxU506UBlnLNtiZbDkng==,type:str]
        gethomepage.dev/widget.url: ENC[AES256_GCM,data:/HUpXaWoYH/4m+A/rUdaQ+9BNsk+lIhaJBiTepGEdQ==,iv:840p0YXmy/OX/P7xcilKu5+bY7MWdXfrxX4TI91CI4s=,tag:TnoxB7goWC7f0LNw13ePXg==,type:str]
        gethomepage.dev/widget.key: ENC[AES256_GCM,data:HQW3+u5LKm/0xC32VNt8oenQ4D++qzURqhyO08UdSmk=,iv:thNeqbYssdxv3YZ/dhkGywhgUHEvED8Hl+4pnCNmrtU=,tag:IqaPa6AEiojgWfKrI9KJMQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlcnlvNzMwQUduZ0RIRXpT
[...]
            MHrnRtIuObrh+QdkpgqWemBEcaKFU+jzFZhEMv0e3b8Yh2KTuNw/8w==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-03-17T07:27:07Z"
    mac: ENC[AES256_GCM,data:ccoDavnmzXbxo/iZNws7GfS2rAkTC32dwTzKwTzD2EnncWZu1xZJyiwmL960y+AAWKtsjlLgNfyMfjRQPXLr3995iZ5/atwXxjmKyGzweCuzUnMSAJURMg16KSAsc6eucy12tcf/CwlfCjL3avLa8Fib8kDMoS5S9Y7bOxz8pas=,iv:YKFZnw+6NPCFSDAheIx/q//BDd6ZtI5J8+F38k2yvHY=,tag:MNyNsENH5VPaWHTUZZTDsQ==,type:str]
    pgp: []
    encrypted_regex: ^(annotations)$
    version: 3.7.3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: bazarr
    namespace: media
    annotations:
        kubernetes.io/ingress.class: ENC[AES256_GCM,data:YFcTWqM=,iv:QuCUHFmmMnfvX3VrHtbSciECewXjXTKVQa/EdzBZNh0=,tag:ElJ/vHxa6Orv9Y8lYEA9ow==,type:str]
        gethomepage.dev/enabled: ENC[AES256_GCM,data:6xP0yw==,iv:JOYckuZkM7ObKi00UFWQt4EsGOPTWzOW09OV30N+tv4=,tag:PpM3ihW8dDetBLCSkzlAaA==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:gp5ZAxmANQEFQBYtAHOOzmW/8l8=,iv:hHOd7rII+mZIMubmxsP72SwPq5wQnFgI7zbKrzNa/Rg=,tag:1MfsZc4UgRwBF2upP/ZCUg==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:6wyLF605tzovzJQ=,iv:J5+LS2bqRSO+ETzUR6Ryho4mwPGX2mZV0fWqERkBh44=,tag:J52TcalIKjV7l+7vTF+/iQ==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:jFmJYhMH,iv:4UBu7qKymKWzD7k4zR0yWEYHjoeI7OMxN1is3xfY3Y8=,tag:jdyXgqN13NpmcPLDAAvTEA==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:LnADLPOq,iv:BPAfzrAhClVbu4qSamCeYWX3KtWhM5C2muUwChge/5U=,tag:SmynJJmtL1VrMPCDee0SMA==,type:str]
        gethomepage.dev/widget.type: ENC[AES256_GCM,data:3WCHk0Wr,iv:Zi1US9fVP/qA12C982lF2u4PScFKjT26bWOoA+41GyI=,tag:g6Us5kupRDWHymq+RZ+PuQ==,type:str]
        gethomepage.dev/widget.url: ENC[AES256_GCM,data:BigbkExO1zmPe+EbPobgCp+CFEHv4xboBFHvYR4pOA==,iv:t++xwEOQP5D1bMb/ncWjnxS93hbGYtF+hY7lNBrWFiY=,tag:HBOS0tPHUx+1ZKOcOLvATg==,type:str]
        gethomepage.dev/widget.key: ENC[AES256_GCM,data:IrrWrqgNgm3X7AmsSJfvOyV90muGs4TvvkxGrW0cjYQ=,iv:47iKSImjVkK3gt5Ae2JcoQnCD3fVbB2Yf1EPY4zYfpw=,tag:2dW/scL6VHXATf1RHP/Gkw==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlcnlvNzMwQUduZ0RIRXpT
[...]
            MHrnRtIuObrh+QdkpgqWemBEcaKFU+jzFZhEMv0e3b8Yh2KTuNw/8w==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-03-17T07:27:07Z"
    mac: ENC[AES256_GCM,data:ccoDavnmzXbxo/iZNws7GfS2rAkTC32dwTzKwTzD2EnncWZu1xZJyiwmL960y+AAWKtsjlLgNfyMfjRQPXLr3995iZ5/atwXxjmKyGzweCuzUnMSAJURMg16KSAsc6eucy12tcf/CwlfCjL3avLa8Fib8kDMoS5S9Y7bOxz8pas=,iv:YKFZnw+6NPCFSDAheIx/q//BDd6ZtI5J8+F38k2yvHY=,tag:MNyNsENH5VPaWHTUZZTDsQ==,type:str]
    pgp: []
    encrypted_regex: ^(annotations)$
    version: 3.7.3
