cluster/homelab/apps/media/plex-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-internal-service
  namespace: media
spec:
  ports:
    - name: http-plex
      port: 32400
      targetPort: 32400
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: plex-internal-service
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.20
    ports:
      - port: 32400
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex-route
  namespace: media
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "plex.sgenov.dev"
  rules:
    - backendRefs:
        - name: plex-internal-service
          port: 32400
